# discord-message-store-client

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: build.yaml  ci.yaml  lint.yaml
client/: __main__.py  bot.py  config.py
client/extensions/: user_watcher.py
